--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,11 +13,18 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
-      - run: sudo apt-get update && sudo apt-get install libboost-test-dev -y
-      - run: cmake . -DPATCH_VERSION=${{ github.run_number }} -DWITH_BOOST_TEST=ON
-      - run: cmake --build .
-      - run: cmake --build . --target gtest
-      - run: cmake --build . --target package
+      - name: Install clang-format
+        run: sudo apt-get update && sudo apt-get install -y clang-format
+      - name: Check repo formatting (only .cpp and .h files)
+        run: find . \( -name '*.cpp' -o -name '*.h' \) -print| xargs clang-format --style=file --dry-run --Werror 
+      - name: Install GCC-11 #lastes ubuntu has gcc 13, which requires new version of c++ standert lib, so to be safe I used gcc-11 for building
+        run: sudo apt-get install -y g++11
+      - name: Configure
+        run: cmake . -DCMAKE_CXX_COMPILER=g++-11 -DPATCH_VERSION=${{ github.run_number }} -DWITH_GTEST_TEST=ON
+      - name: Build and run tests
+        run: cmake --build . --target test_version && ./tests/test_version
+      - name: Create package
+        run: cmake --build . --target package
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
