--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04 
     steps:
       - uses: actions/checkout@v2
         with:
@@ -17,10 +17,8 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y clang-format
       - name: Check repo formatting (only .cpp and .h files)
         run: find . \( -name '*.cpp' -o -name '*.h' \) -print| xargs clang-format --style=file --dry-run --Werror 
-      - name: Install GCC-11 #lastes ubuntu has gcc 13, which requires new version of c++ standert lib, so to be safe I used gcc-11 for building
-        run: sudo apt-get install -y g++11
       - name: Configure
-        run: cmake . -DCMAKE_CXX_COMPILER=g++-11 -DPATCH_VERSION=${{ github.run_number }} -DWITH_GTEST_TEST=ON
+        run: cmake . -DPATCH_VERSION=${{ github.run_number }} -DWITH_GTEST_TEST=ON
       - name: Build and run tests
         run: cmake --build . --target test_version && ./tests/test_version
       - name: Create package
